--- a/Primera_Unidad/primera_unidad_python_basico_ejercicios2_solucion.ipynb
+++ b/Primera_Unidad/primera_unidad_python_basico_ejercicios2_solucion.ipynb
@@ -199,11 +199,86 @@
     "    'mochila' : ['xilofono','daga', 'rollo','pan']  \n",
     "}\n",
     "\n",
+    "    - Crea el diccionario\n",
     "    - Añade un key llamado \"billetera\"\n",
     "    - Los valores de billetera será \"monedas\",\"billetes\"\n",
     "    - REaliza un sort de los items dentro de la llave mochila\n",
     "    - Elimina el valor \"daga\" \n",
     "    - Añade el valor de 50 en la llave de oro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "inventory = {}\n",
+    "inventory['oro'] = [500]\n",
+    "inventory['bolsa'] = ['piedra', 'joya']\n",
+    "inventory['mochila'] = ['xilofono','daga', 'rollo','pan']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "inventory['billetera'] = ['monedas','billetes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "l1 = inventory['mochila']\n",
+    "l1.sort()\n",
+    "inventory['mochila'] = l1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "inventory['oro'].append(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'billetera': ['monedas', 'billetes'],\n",
+       " 'bolsa': ['piedra', 'joya'],\n",
+       " 'mochila': ['daga', 'pan', 'rollo', 'xilofono'],\n",
+       " 'oro': [500, 50]}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventory"
    ]
   },
   {
